@@ -19,4 +19,18 @@ describe "github issues" do
       EOS
     end
   end
+    
+  specify "issues web opens the project's issues page" do
+    running :issues, "web" do
+      setup_url_for
+      @helper.should_receive(:open).once.with("https://github.com/user/project/issues")
+    end
+  end
+
+  specify "issues web <user> opens the project's issues page for a user repo" do
+    running :issues, "web", "drnic" do
+      setup_url_for
+      @helper.should_receive(:open).once.with("https://github.com/drnic/project/issues")
+    end
+  end
 end
